--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -481,8 +481,9 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <h2>Literatur</h2>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p><img data-src="images/eid_gollwitzer_schmitt.jpg" height="350"></p>
+<p><img data-src="images/eid_gollwitzer_schmitt.jpg" height="320"></p>
 <div style="font-size: 22px">
+<p><em>Michael Eid, Mario Gollwitzer &amp; Manfred Schmitt. Statistik und Forschungsmethoden. Beltz, 5. Auflage (2017).</em></p>
 <p><strong>Vorteile:</strong></p>
 <ul>
 <li class="fragment">Umfasst alles (und) mehr, was Sie für Statistik 1 und 2 wissen müssen</li>
@@ -495,13 +496,14 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </ul>
 </div>
 </div><div class="column" style="width:50%;">
-<p><img data-src="images/field_cover.png" height="350"></p>
+<p><img data-src="images/cover_larson_farber.jpg" height="320"></p>
 <div style="font-size: 22px">
+<p><em>Ron Larson &amp; Betsy Farber. Elementary Statistics: Picturing the World. Pearson, 7. Auflage (2019).</em></p>
 <p><strong>Vorteile:</strong></p>
 <ul>
-<li class="fragment">Äußerst unterhaltsamer Stil</li>
+<li class="fragment">Unterhaltsamer Stil</li>
 <li class="fragment">Intuitiver Einstieg in die Statistik</li>
-<li class="fragment">Enge Verknüpfung mit der Statistik-Programmiersprache R — sehr hilfreich für Ihre Bachelor- oder Masterarbeit.</li>
+<li class="fragment">Viele Übungen <!-- - Enge Verknüpfung mit der Statistik-Programmiersprache R &mdash; sehr hilfreich für Ihre Bachelor- oder Masterarbeit. --></li>
 </ul>
 <p><strong>Nachteile:</strong></p>
 <ul>
@@ -1176,6 +1178,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
           }
         });
       }
+      // identifystring
 
       window.onload = bgcolor();
     </script>
