--- a/13_confidence_intervals/_slides/index.html
+++ b/13_confidence_intervals/_slides/index.html
@@ -342,6 +342,7 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
+  <p class="date">30.01.2024</p>
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
 <div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
@@ -496,7 +497,7 @@ plt.savefig(os.path.join(root, 'images', 'paradoxia_ci_reg.png'), bbox_inches="t
 </ul>
 <div style="margin-top: -7px; margin-bottom: -7px">
 <p><span class="math display">\[
-\text{Konfidenzintervall}\qquad [\hat{\theta}-z_\text{crit}\cdot se; \hat{\theta}+z_\text{crit}\cdot se]
+\text{Konfidenzintervall:}\qquad CI=\hat{\theta}\pm z_\text{crit}\cdot se
 \]</span></p>
 </div>
 <!-- - In Analogie zum z-Raum können wir formulieren: das **Konfidenzintervall** definiert einen Bereich hypothetischer Stichprobeneffekte $\Delta\bar{x}_\text{hypo}$,  die, *unter der Annahme, dass der beobachtete Stichprobenkennwert $\Delta\bar{x}$ dem wahren Kennwert $\Delta\bar{x}_\text{true}$ entspricht*, nicht unwahrscheinlich sind. -->
@@ -597,7 +598,7 @@ z_\text{crit} = z_{(1-\frac{\alpha}{2})}
 <li class="fragment">Damit haben wir folgende aktualisierte Form des Konfidenzintervalls:</li>
 </ul>
 <p><span class="math display">\[
-\text{Konfidenzintervall}\qquad [\hat{\theta}-z_{(1-\frac{\alpha}{2})}\cdot se; \hat{\theta}+z_{(1-\frac{\alpha}{2})}\cdot se]
+\text{Konfidenzintervall:}\qquad CI=\hat{\theta}\pm z_{(1-\frac{\alpha}{2})}\cdot se
 \]</span></p>
 <ul>
 <li class="fragment">Der kritische z-Wert wird wie bisher auf Basis der Verteilungsfunktion <span class="math inline">\(\Phi\)</span> der Standardnormalverteilung berechnet (→ z-Tabelle!):</li>
@@ -780,8 +781,7 @@ Bei einem 95%-Konfidenzintervall erwarten wir also, dass 95% der hypothetischen 
 </colgroup>
 <tbody>
 <tr class="odd">
-<td>Schließt 95% der Fläche unter der Stichprobenverteilung(*) ein.<br>
-(*die auf Basis der vorliegenden Stichprobe berechnet wurde)</td>
+<td>Schließt 95% der Fläche unter der Stichprobenverteilung ein.</td>
 <td style="text-align: center;"><img data-src="images/green_checkmark.png" height="50"></td>
 </tr>
 <tr class="even">
@@ -798,7 +798,7 @@ Bei einem 95%-Konfidenzintervall erwarten wir also, dass 95% der hypothetischen 
 </tr>
 </tbody>
 </table>
-<div class="vspace-xlarge">
+<div class="vspace-large">
 
 </div>
 <!---  Table --->
@@ -832,7 +832,7 @@ Bei einem 95%-Konfidenzintervall erwarten wir also, dass 95% der hypothetischen 
 <div class="columns">
 <div class="column" style="width:80%;">
 <p>Als Beispiel nehmen wir eine <strong>Studie</strong> an, in der Sie die <strong>durchschnittliche Nasenlänge von Psychologiestudierenden</strong> untersuchen. Als Referenzwert ist Ihnen der Bundesnasenlängendurchschnitt von <span class="math inline">\(\mu_0=5cm\)</span> bekannt — diese Referenz beachten wir aber zunächst nicht.</p>
-<p>Sie erheben eine Stichprobe mit <span class="math inline">\(N\)</span> Psychologiestudierenden und berechnen das Konfidenzintervall Ihrer Mittelwertsschätzung <span class="math inline">\(\bar{x}\)</span> mit einem Konfidenzniveau von <span class="math inline">\(1-\alpha\)</span>.</p>
+<p>Sie erheben eine Stichprobe mit <span class="math inline">\(n\)</span> Psychologiestudierenden und berechnen das Konfidenzintervall Ihrer Mittelwertsschätzung <span class="math inline">\(\bar{x}\)</span> mit einem Konfidenzniveau von <span class="math inline">\(1-\alpha\)</span>.</p>
 </div><div class="column" style="width:20%;">
 <p><img data-src="images/psych.png"></p>
 </div>
@@ -842,14 +842,14 @@ Bei einem 95%-Konfidenzintervall erwarten wir also, dass 95% der hypothetischen 
 
 </div>
 <p><span class="math display">\[
-CI = [\bar{x}-z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{N}}; \bar{x}+z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{N}}]
+CI = \bar{x}\pm z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{n}}
 \]</span></p>
 </section>
 <section class="slide level2">
 <h2>Konfidenzintervall: ein Beispiel</h2>
 <div class="columns">
 <div class="column" style="width:80%;">
-<p>Nehmen wir für eine erste Berechnung eines Konfidenzintervalls an, dass Sie eine Stichprobe von <span class="math inline">\(N=10\)</span> untersuchen und Nasenlängen in der Psych-Population eine Streuung von <span class="math inline">\(\sigma=0{,}5\)</span> aufweisen. Das Konfidenzniveau <span class="math inline">\(1-\alpha\)</span> solle 95% sein (also <span class="math inline">\(\alpha=0{,}05\)</span>).</p>
+<p>Nehmen wir für eine erste Berechnung eines Konfidenzintervalls an, dass Sie eine Stichprobe von <span class="math inline">\(n=10\)</span> untersuchen und Nasenlängen in der Psych-Population eine Streuung von <span class="math inline">\(\sigma=0{,}5\)</span> aufweisen. Das Konfidenzniveau <span class="math inline">\(1-\alpha\)</span> solle 95% sein (also <span class="math inline">\(\alpha=0{,}05\)</span>).</p>
 <p>In einem ersten Schritt müssen wir dafür den kritischen z-Wert <span class="math inline">\(z_{(1-\frac{\alpha}{2})}\)</span> berechnen:</p>
 </div><div class="column" style="width:20%;">
 <p><img data-src="images/psych.png" style="margin-top: -35px !important"></p>
@@ -866,7 +866,7 @@ z_{(1-\frac{\alpha}{2})} = \Phi\left(1-\frac{\alpha}{2}\right) = \Phi\left(1-\fr
 <li class="fragment">Wir setzen alle Werte ein, um das Konfidenzintervall für diese Mittelwertschätzung zu erhalten:</li>
 </ul>
 <p><span class="math display">\[
-CI_{95} = \left[4{,}5-1{,}96\cdot\frac{0{,}5}{\sqrt{10}}; 4{,}5+1{,}96\cdot\frac{0{,}5}{\sqrt{10}}\right]\quad\overset{\text{(Computer)}}{\longrightarrow}\quad CI_{95} = [4{,}19; 4{,}81]
+CI_{95} = 4{,}5\pm 1{,}96\cdot\frac{0{,}5}{\sqrt{10}} = 4{,}5\pm 0{,}31\quad\overset{\text{(Computer)}}{\longrightarrow}\quad CI_{95} = [4{,}19; 4{,}81]
 \]</span></p>
 <p>⇒ Der Mittelwert <span class="math inline">\(\bar{x}=4{,}5cm\)</span> ist mit einem 95%-Konfidenzintervall <span class="math inline">\([4{,}19cm; 4{,}81cm]\)</span> verbunden.</p>
 </section>
@@ -910,12 +910,12 @@ CI_{95} = \left[4{,}5-1{,}96\cdot\frac{0{,}5}{\sqrt{10}}; 4{,}5+1{,}96\cdot\frac
 <p>Für das Verständnis von Konfidenzintervallen ist es gewinnbringend zu untersuchen, wie das Konfidenzintervall von den relevanten Variablen einer Studie abhängt.</p>
 <p>Aus der Formel</p>
 <p><span class="math display">\[
-CI=[\hat{\theta}-z_{(1-\frac{\alpha}{2})}\cdot se; \hat{\theta}+z_{(1-\frac{\alpha}{2})}\cdot se]\qquad\text{bzw.}\qquad CI=[\hat{\theta}-z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{N}}; \hat{\theta}+z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{N}}]
+CI=\hat{\theta}\pm z_{(1-\frac{\alpha}{2})}\cdot se\qquad\text{bzw.}\qquad CI=\hat{\theta}\pm z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{n}}
 \]</span></p>
 <p>ergeben sich direkt die <strong>Einflussfaktoren auf das Konfidenzintervall</strong>:</p>
 <ul>
 <li class="fragment">Die <strong>Streuung</strong> <span class="math inline">\(\sigma\)</span> in der Population</li>
-<li class="fragment">Die <strong>Stichprobengröße</strong> <span class="math inline">\(N\)</span></li>
+<li class="fragment">Die <strong>Stichprobengröße</strong> <span class="math inline">\(n\)</span></li>
 <li class="fragment">Das <strong>Konfidenzniveau</strong> <span class="math inline">\(1-\alpha\)</span> bzw. der damit verbundene kritische z-Wert <span class="math inline">\(z_{(1-\frac{\alpha}{2})}\)</span></li>
 </ul>
 </section>
@@ -928,19 +928,19 @@ CI=[\hat{\theta}-z_{(1-\frac{\alpha}{2})}\cdot se; \hat{\theta}+z_{(1-\frac{\alp
 
 <img data-src="images/ci_sigma.png" class="r-stretch"><p><strong>Interpretation:</strong> Je größer die Streuung in der Population, desto größer auch der Standardfehler, desto unsicherer ist man bezüglich der Schätzung des Mittelwertes, desto größer das Konfidenzintervall.</p>
 <p><span class="math display">\[
-CI=[\bar{x}-z_{(1-\frac{\alpha}{2})}\cdot\frac{\color{blue}{\sigma}}{\sqrt{N}}; \bar{x}+z_{(1-\frac{\alpha}{2})}\cdot\frac{\color{blue}{\sigma}}{\sqrt{N}}]
+CI=\bar{x}\pm z_{(1-\frac{\alpha}{2})}\cdot\frac{\color{blue}{\sigma}}{\sqrt{n}}
 \]</span></p>
 </section>
 <section class="slide level2">
 <h2>Einflussfaktoren auf das Konfidenzintervall</h2>
-<p><strong>Einflussfaktor 2:</strong> je <em>größer</em> die Stichprobe <span class="math inline">\(N\)</span>, desto <em>kleiner</em> ist das Konfidentintervall.</p>
+<p><strong>Einflussfaktor 2:</strong> je <em>größer</em> die Stichprobe <span class="math inline">\(n\)</span>, desto <em>kleiner</em> ist das Konfidentintervall.</p>
 <div class="vspace-medium">
 
 </div>
 
 <img data-src="images/ci_N.png" class="r-stretch"><p><strong>Interpretation:</strong> Je größer die Stichprobe, desto kleiner ist der Standardfehler, desto sicherer ist man bezüglich der Schätzung des Mittelwertes, desto kleiner das Konfidenzintervall.</p>
 <p><span class="math display">\[
-CI=[\bar{x}-z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{\color{blue}{N}}}; \bar{x}+z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{\color{blue}{N}}}]
+CI=\bar{x}\pm z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{\color{blue}{n}}}
 \]</span></p>
 </section>
 <section class="slide level2">
@@ -953,7 +953,7 @@ CI=[\bar{x}-z_{(1-\frac{\alpha}{2})}\cdot\frac{\sigma}{\sqrt{\color{blue}{N}}}; 
 <img data-src="images/ci_alpha.png" class="r-stretch"><p><strong>Interpretation:</strong></p>
 <p>Je größer das Konfidenzintervall <span class="math inline">\(1-\alpha\)</span>, desto kleiner das Signifikanzniveau <span class="math inline">\(\alpha\)</span>, desto größer ist das Intervall potentieller Populationsparameter <span class="math inline">\(\theta\)</span>, die nicht signifikant verschieden vom Stichprobenkennwerwert <span class="math inline">\(\hat{\theta}\)</span> sind.</p>
 <p><span class="math display">\[
-CI=[\Delta\bar{x}-\color{blue}{z_{(1-\frac{\alpha}{2})}}\cdot\frac{\sigma}{\sqrt{N}}; \Delta\bar{x}+\color{blue}{z_{(1-\frac{\alpha}{2})}}\cdot\frac{\sigma}{\sqrt{N}}]
+CI=\Delta\bar{x}\pm\color{blue}{z_{(1-\frac{\alpha}{2})}}\cdot\frac{\sigma}{\sqrt{n}}
 \]</span></p>
 <p><span style="font-size: 25px; margin-top: 13px">Alternativ, für Pragmatiker: je kleiner <span class="math inline">\(\alpha\)</span>, desto größer <span class="math inline">\(z_{(1-\frac{\alpha}{2})}\)</span>, desto größer das Konfidenzintervall.</span></p>
 </section>
@@ -983,7 +983,7 @@ CI=[\Delta\bar{x}-\color{blue}{z_{(1-\frac{\alpha}{2})}}\cdot\frac{\sigma}{\sqrt
 </ul>
 <p><u><strong>Konfidenzintervalle für Mittelwerte:</strong></u></p>
 <p><span class="math display">\[
-CI=[\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}; \bar{x}+t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}]
+CI=\bar{x}\pm t_{(1-\frac{\alpha}{2},\;\text{df})}\cdot\frac{\hat{\sigma}}{\sqrt{n}}
 \]</span></p>
 <p><span style="font-size: 22px; margin-left: 50px">(Beachte auch den Übergang von <span class="math inline">\(\sigma\)</span> zu <span class="math inline">\(\hat{\sigma}\)</span>, da wir nun die Streuung auf Basis der Stichprobe schätzen)</span></p>
 <ul>
@@ -998,9 +998,9 @@ CI=[\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}; \bar{x}+
 
 </div>
 <p><span class="math display">\[
-CI=[\Delta\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot \hat{se}; \Delta\bar{x}+t_{(1-\frac{\alpha}{2})}\cdot\hat{se}]\\
+CI=\Delta\bar{x}\pm t_{(1-\frac{\alpha}{2})}\cdot \hat{se}\\
 \text{bzw.}\\
-CI=[\Delta\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}; \Delta\bar{x}+t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}]
+CI=\Delta\bar{x}\pm t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{n}}
 \]</span></p>
 <ul>
 <li class="fragment">Für die Berechnung der Populationsstreuung <span class="math inline">\(\hat{\sigma}\)</span> bzw. des Standardfehlers <span class="math inline">\(\hat{se}\)</span> gelten alle Formeln (inkl. Regeln zu Freiheitsgraden der t-Verteilung) die wir im Kontext des t-Tests kennengelernt haben.</li>
@@ -1048,7 +1048,7 @@ CI=[\Delta\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}; \D
 <li class="fragment">Den dafür notwendigen Standardfehler haben wir bereits kennengelernt:</li>
 </ul>
 <p><span class="math display">\[
-\hat{se} = \frac{1-r^2}{\sqrt{N-1}}
+\hat{se} = \frac{1-r^2}{\sqrt{n-1}}
 \]</span></p>
 <div class="columns">
 <div class="column" style="width:51%;">
@@ -1092,13 +1092,13 @@ CI=[\Delta\bar{x}-t_{(1-\frac{\alpha}{2})}\cdot\frac{\hat{\sigma}}{\sqrt{N}}; \D
 <li class="fragment">Der Standardfehler ist jetzt nicht mehr von Korrelation abhängig, sondern für jede Populationskorrelation gleich:</li>
 </ul>
 <p><span class="math display">\[
-\hat{se} = \frac{1}{\sqrt{N-3}}
+\hat{se} = \frac{1}{\sqrt{n-3}}
 \]</span></p>
 </div><div class="column" style="width:45%;">
 <div class="vspace-small">
 
 </div>
-<p><img data-src="images/pearson_dist_z.png" style="margin-top: -22px !important" height="420"></p>
+<p><img data-src="images/pearson_dist_z_exact.png" style="margin-top: -22px !important" height="420"></p>
 </div>
 </div>
 <!----------------->
@@ -1116,11 +1116,11 @@ z_r = \text{artanh}({r})
 <p><strong>2. Berechnung des Konfidenzintervalls</strong></p>
 <p>Aufgrund der asymptotischen Normalverteilung kann das Konfidenzintervall für <span class="math inline">\(z_r\)</span> mithilfe der z‑Werte der Standardnormalverteilung (z.B. aus der z-Tabelle) angegeben werden:</p>
 <p><span class="math display">\[
-CI_z=[z_r-z_{(1-\frac{\alpha}{2})}\cdot \hat{se}; z_r+z_{(1-\frac{\alpha}{2})}\cdot \hat{se}]
+CI_z=z_r\pm z_{(1-\frac{\alpha}{2})}\cdot \hat{se}
 \]</span></p>
 <p>bzw. nach Einsetzen des Standardfehlers:</p>
 <p><span class="math display">\[
-CI_z=[z_r-z_{(1-\frac{\alpha}{2})}\cdot \frac{1}{\sqrt{N-3}}; z_r+z_{(1-\frac{\alpha}{2})}\cdot \frac{1}{\sqrt{N-3}}]
+CI_z=z_r\pm z_{(1-\frac{\alpha}{2})}\cdot \frac{1}{\sqrt{n-3}}
 \]</span></p>
 <p><strong>3. Rücktransformation in Korrelation</strong></p>
 <p>Sind <span class="math inline">\(z_r^u\)</span> und <span class="math inline">\(z_r^o\)</span> die untere und obere Grenze des Konfidenzintervalls von <span class="math inline">\(z_r\)</span> aus Schritt 2, so lässt sich dieses mithilfe des <em>Tangens Hyperbolicus</em> in eine Korrelation zurücktransformieren:</p>
@@ -1134,7 +1134,7 @@ CI = [\tanh{(z_r^{u})}; \tanh{(z_r^{o})}]
 <section class="slide level2">
 <h2>Konfidenzintervalle für die Korrelation: Beispiel</h2>
 <ul>
-<li class="fragment">Gehen wir zurück zu unserem Beispiel aus der letzten Vorlesung, bei dem Sie in einer Stichprobe <span class="math inline">\(N=12\)</span> eine Korrelation zwischen Größe und Gewicht von <span class="math inline">\(r=0{,}4\)</span> gemessen hatten.</li>
+<li class="fragment">Gehen wir zurück zu unserem Beispiel aus der letzten Vorlesung, bei dem Sie in einer Stichprobe <span class="math inline">\(n=12\)</span> eine Korrelation zwischen Größe und Gewicht von <span class="math inline">\(r=0{,}4\)</span> gemessen hatten.</li>
 <li class="fragment">Ein Signifikanztest hatte gezeigt, dass die Korrelation von Null nicht signifikant verschieden war (Signifikanznieau <span class="math inline">\(\alpha=0{,}05\)</span>). Der Test war sogar einseitig und wir erwarten daher, dass das 95%-Konfidenzintervall den Wert Null erst recht einschließen muss.</li>
 </ul>
 <p><strong>1. Fisher z-Transformation</strong></p>
@@ -1142,14 +1142,11 @@ CI = [\tanh{(z_r^{u})}; \tanh{(z_r^{o})}]
 z_r = \text{artanh}({r}) = \text{artanh}({0{,}4}) = 0{,}424
 \]</span></p>
 <p><strong>2. Berechnung des Konfidenzintervalls</strong></p>
-<p>Standardfehler: <span class="math inline">\(\qquad \hat{se} = \frac{1}{\sqrt{N-3}} = \frac{1}{\sqrt{12-3}} = \frac{1}{3}\)</span></p>
+<p>Standardfehler: <span class="math inline">\(\qquad \hat{se} = \frac{1}{\sqrt{n-3}} = \frac{1}{\sqrt{12-3}} = \frac{1}{3}\)</span></p>
 <p>Kritischer z-Wert (z.B. aus z-Tabelle): <span class="math inline">\(\qquad z_{(1-\frac{\alpha}{2})} = z_{(1-\frac{0{,}05}{2})} = z_{(0{,}975)} = 1{,}96\)</span></p>
 <p>Konfidenzintervall:</p>
 <p><span class="math display">\[
-\begin{aligned}
-CI_z&amp;=[z_r-z_{(1-\frac{\alpha}{2})}\cdot\hat{se}; z_r+z_{(1-\frac{\alpha}{2})}\cdot\hat{se}] = \\
-&amp;=[0{,}424-1{,}96\cdot \scriptsize\frac{1}{3}\normalsize; 0{,}424+1{,}96\cdot \scriptsize\frac{1}{3}\normalsize] = [-0{,}230; 1{,}077]
-\end{aligned}
+CI_z = z_r\pm z_{(1-\frac{\alpha}{2})}\cdot\hat{se} = 0{,}424\pm 1{,}96\cdot \scriptsize\frac{1}{3}\normalsize = [-0{,}230; 1{,}077]
 \]</span></p>
 <!----------------->
 <!--- New slide --->
@@ -1179,7 +1176,7 @@ CI = [\tanh{(z_r^{u})}; \tanh{(z_r^{o})}] = [\tanh{(-0{,}230)}; \tanh{(1{,}077)}
 <li class="fragment">In diesem Fall gilt die gleiche Logik wie bei Mittelwert(unterschied)en: ist der Standardfehler bekannt kann der z-Wert verwendet werden, <em>im allgemeinen Fall</em> jedoch sollte der t-Wert verwendet werden:</li>
 </ul>
 <p><span class="math display">\[
-CI=[b_i\pm t_{(1-\frac{\alpha}{2},\,n-2)}\cdot\hat{se}]
+CI=b_i\pm t_{(1-\frac{\alpha}{2},\,n-2)}\cdot\hat{se}
 \]</span></p>
 <p><span style="font-size: 20px">(Wir erinnern uns: für Korrelation und Steigung müssen 2 Mittelwerte berechnet werden (die von <span class="math inline">\(x\)</span> und <span class="math inline">\(y\)</span>), daher wird die t-Verteilung mit <span class="math inline">\(\text{df}=n-2\)</span> Freiheitsgraden angewandt.)</span></p>
 <p>Im Fall der Steigung (<span class="math inline">\(b_1\)</span>) galt:</p>
@@ -1215,7 +1212,7 @@ t_{(1-\frac{\alpha}{2},\,n-2)} = t_{(0.975,\,10)} \approx 2{,}23
 <li class="fragment">Damit ergibt sich das Konfidenzintervall zu</li>
 </ul>
 <p><span class="math display">\[
-CI=[b_1\pm t_{(1-\frac{\alpha}{2},\,n-2)}\cdot\hat{se}]=[0{,}16\pm 2{,}23\cdot 0{,}12]=[0{,}16\pm 0{,}27] = [-0{,}11;0{,}43]
+CI=b_1\pm t_{(1-\frac{\alpha}{2},\,n-2)}\cdot\hat{se}=0{,}16\pm 2{,}23\cdot 0{,}12=0{,}16\pm 0{,}27 = [-0{,}11;0{,}43]
 \]</span></p>
 <!----------------->
 <!--- New slide --->
@@ -1536,7 +1533,7 @@ CI_z&amp;=z_r\pm z_{(1-\frac{\alpha}{2})}\cdot \frac{1}{\sqrt{N-3}} = 0{,}572\pm
 <p><img data-src="images/paradoxia_ci_reg.png" height="400"></p>
 <p><img src="images/hmu_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
-
+<p>Vorlesung 13: Konfidenzintervalle</p>
 </div>
 </section></section>
 <section id="footnotes" class="footnotes footnotes-end-of-document smaller scrollable" role="doc-endnotes"><h2>Fußnoten</h2>
@@ -1781,6 +1778,7 @@ CI_z&amp;=z_r\pm z_{(1-\frac{\alpha}{2})}\cdot \frac{1}{\sqrt{N-3}} = 0{,}572\pm
           }
         });
       }
+      // identifystring
 
       window.onload = bgcolor();
     </script>
