--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -478,6 +478,43 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </table>
 </section>
 <section class="slide level2">
+<h2>Vorlesungsfolien</h2>
+<div class="vspace-medium">
+
+</div>
+<!---  Table --->
+<table style="width:100%;">
+<colgroup>
+<col style="width: 10%">
+<col style="width: 35%">
+<col style="width: 20%">
+<col style="width: 35%">
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><strong>Trainex</strong></td>
+<td><img data-src="images/trainex.png"></td>
+<td>Format: pdf</td>
+<td><a href="https://www.trainex25.de/hmu-trainex">https://www.trainex25.de/hmu-trainex</a></td>
+</tr>
+<tr class="even">
+<td><strong>Onlineversion</strong></td>
+<td><img data-src="images/m-guggenmos_github.png"></td>
+<td>Format: html</td>
+<td><a href="https://m-guggenmos.github.io">https://m-guggenmos.github.io</a></td>
+</tr>
+</tbody>
+</table>
+</section>
+<section class="slide level2">
+<h2>Klausur</h2>
+<ul>
+<li class="fragment">In der vorlesungsfreien Zeit nach Semesterende findet eine <strong>schriftliche Klausur</strong> zu Statistik 1 statt.</li>
+<li class="fragment"><strong>Klausurrelevant</strong> sind dabei alle Inhalte der Vorlesungsfolien, falls nicht extra gekennzeichnet.</li>
+<li class="fragment"><strong>Klausurrelevant</strong> sind auch die Übungen, die Sie im Seminar durchführen.</li>
+</ul>
+</section>
+<section class="slide level2">
 <h2>Literatur</h2>
 <div class="columns">
 <div class="column" style="width:50%;">
