--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -538,8 +538,8 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <p><em>Ron Larson &amp; Betsy Farber. Elementary Statistics: Picturing the World. Pearson, 7. Auflage (2019).</em></p>
 <p><strong>Vorteile:</strong></p>
 <ul>
-<li class="fragment">Unterhaltsamer Stil</li>
-<li class="fragment">Intuitiver Einstieg in die Statistik</li>
+<li class="fragment">Unterhaltsamer intuitiver Stil</li>
+<li class="fragment">Kurz &amp; bündig</li>
 <li class="fragment">Viele Übungen <!-- - Enge Verknüpfung mit der Statistik-Programmiersprache R &mdash; sehr hilfreich für Ihre Bachelor- oder Masterarbeit. --></li>
 </ul>
 <p><strong>Nachteile:</strong></p>
