--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -544,7 +544,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </ul>
 <p><strong>Nachteile:</strong></p>
 <ul>
-<li class="fragment">Weniger geeignet als schnelles Nachschlagewerk</li>
+<li class="fragment">Weniger geeignet als Nachschlagewerk</li>
 </ul>
 </div>
 </div>
