--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -523,7 +523,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <p><em>Michael Eid, Mario Gollwitzer &amp; Manfred Schmitt. Statistik und Forschungsmethoden. Beltz, 5. Auflage (2017).</em></p>
 <p><strong>Vorteile:</strong></p>
 <ul>
-<li class="fragment">Umfasst alles (und) mehr, was Sie für Statistik 1 und 2 wissen müssen</li>
+<li class="fragment">Umfasst alles (und mehr), was Sie für Statistik 1 und 2 wissen müssen</li>
 <li class="fragment">Sehr zuverlässige Referenz</li>
 <li class="fragment">Übungen</li>
 </ul>
