--- a/09_inference/_slides/index.html
+++ b/09_inference/_slides/index.html
@@ -863,7 +863,7 @@ plt.savefig('images/noselength_limit.png', bbox_inches='tight')
 <img data-src="images/inference1_annot.png" class="r-stretch"><div class="vspace-small">
 
 </div>
-<p>⇒ Der wahre Mittelwert (d.h. der Mittelwert der Population) in diesem Beispiel also <span class="math inline">\(\mu = 6cm\)</span>.</p>
+<p>⇒ Der wahre Mittelwert (d.h. der Mittelwert der Population) ist in diesem Beispiel <span class="math inline">\(\mu = 6cm\)</span>.</p>
 <div class="vspace-small">
 
 </div>
