--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@ a:active {
 @media only screen and (max-width: 600px), only screen and (max-device-width: 600px) {
 
     h1 {
-        font-size: 4rem;
+        font-size: 3.25rem;
     }
 
     #lectures td {
-        font-size: 2.8rem;
+        font-size: 2.1rem;
+    }
+
+    #lectures {
+        border-spacing: 0 0.5rem ;
     }
 
     img.img-anim {
