--- a/09_inference/_animslides/index.html
+++ b/09_inference/_animslides/index.html
@@ -1333,11 +1333,12 @@ se^2 = \frac{\sigma^2}{n} \qquad \text{bzw.} \qquad se = \frac{\sigma}{\sqrt{n}}
 </div>
 </div><div class="column" style="width:55%;">
 <p>Nehmen wir an, die Nasenlängen der Männer in unserer Studie weisen eine durchschnittliche Länge von <span class="math inline">\(6cm\)</span> auf und einen Standardfehler (des Mittelwertes) von <span class="math inline">\(0{,}5cm\)</span>.</p>
-<p><strong>Wir können damit sagen, dass sich der wahre Mittelwert der Population mit 68% Wahrscheinlichkeit in dem Intervall</strong></p>
+<p>Wir können damit sagen, dass der Bereich</p>
 <p><span class="math display">\[
 \bar{x}\pm\hat{se} = 6\pm 0{,}5 = [5{,}5; 6{,}5]
 \]</span></p>
-<p><strong>befinden wird</strong>.</p>
+<p>68% der Stichprobenverteilung umfasst.</p>
+<p><span style="font-size: 18px">In Vorlesung 13 werden wir noch feststellen, dass wir (leider) <u>nicht</u> schlussfolgern können, dass der wahre Populationsmittelwert <span class="math inline">\(\mu\)</span> mit 68% Wahrscheinlichkeit in diesem Intervall liegt.</span></p>
 </div><div class="column" style="width:35%;">
 <p><img data-src="images/sem_example.png" height="280"></p>
 </div>
